# tiralabra23

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: execution_document.md  implementation_document.md  requirements_specification.md  testing_document.md  user_instructions.md
documentation/weekly_reports/: week_report1.md  week_report2.md  week_report3.md  week_report4.md  week_report5.md  week_report6.md
dokumentaatio/: requirememts_specification.md
dokumentaatio/weekly_reports/: week_report1.md
src/: constants.py  determine_rules.py  determine_rules_freqs.py  index.py  markov_process.py  read_file.py  trie.py  ui.py
src/tests/: determine_rules_test.py  markov_process_test.py  read_file_test.py  trie_test.py
src/tests/testdata/: alice_in_wonderland.txt  catsanddogs.txt  ilike.txt  periods.txt  santer_ivalo_kreivin_aikaan.txt
